<resources>
    <string name="app_name">Barcode Scanner Task</string>
    <string name="camera_permission_denied">Camera permission is required to scan barcodes.</string>
    <string name="camera_permission_blocked">Camera access is blocked. Allow it in Settings &gt; Permissions &gt; Camera.</string>
    <string name="open_settings">Settings</string>
    <string name="camera_off_hint">Camera is off.\nTap Start Scanning to begin.</string>
    <string name="start_scanning">Start Scanning</string>
    <string name="stop_scanning">Stop Scanning</string>
    <string name="scanned_result_prefix">Result: %1$s</string>
    <string name="no_barcode_scanned">No barcode scanned yet</string>
    <string name="clear_history">Clear History</string>
    <string name="history_title">Scan History</string>
</resources>